--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,101 @@ $color-bg: #f7f7f7;
 
 $font-main: "Montserrat", sans-serif;
 $font-second: "Roboto Slab", serif;
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+html {
+  font-family: $font-main;
+}
+
+.button-main {
+  width: 240px;
+  height: 60px;
+  background: $color-main;
+  color: $color-thin;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  &:hover {
+    background: #edc025;
+  }
+}
+
+/* HEADER */
+header {
+  background-image: url("../images/header-bg.jpg");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+
+  nav {
+    height: 50px;
+
+    span.logo {
+      color: $color-main;
+      text-transform: uppercase;
+      line-height: 50px;
+      font-weight: bold;
+    }
+
+    ul {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      li {
+        a {
+          color: $color-thin;
+          text-decoration: none;
+          text-transform: uppercase;
+          font-size: 14px;
+          line-height: 50px;
+          transition: 0.3s;
+          &:hover {
+            border-bottom: 3px solid $color-main;
+          }
+        }
+      }
+    }
+  }
+
+  div.header-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: $color-thin;
+
+    .page-subtitle {
+      font-size: 40px;
+      font-style: italic;
+      margin-bottom: 50px;
+    }
+
+    .page-title {
+      font-size: 75px;
+      font-weight: bold;
+      margin-bottom: 60px;
+      text-transform: uppercase;
+    }
+  }
+}
