--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,25 @@ html {
   background: #edc025;
 }
 
+h2.title {
+  font-size: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+h3.subtitle {
+  font-size: 16px;
+  color: #bbbbbb;
+  font-style: italic;
+  margin-bottom: 80px;
+}
+
+h3.services-title {
+  font-weight: bold;
+  font-size: 18px;
+}
+
 /* HEADER */
 header {
   background-image: url("../images/header-bg.jpg");
@@ -95,6 +114,36 @@ header div.header-container .page-title {
   font-weight: bold;
   margin-bottom: 60px;
   text-transform: uppercase;
+}
+
+/* SERVICES */
+div.services {
+  text-align: center;
+  margin: 120px auto;
+}
+
+div.services i {
+  color: #fed136;
+  font-size: 40px;
+  width: 80px;
+  height: 80px;
+  line-height: 70px;
+  border: 3px solid #fed136;
+  border-radius: 50%;
+  transition: 0.3s;
+  margin-bottom: 25px;
+}
+
+div.services i:hover {
+  background: #fed136;
+  color: #ffffff;
+}
+
+div.services p {
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  color: #bbbbbb;
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
