--- a/sass/style.scss
+++ b/sass/style.scss
@@ -152,3 +152,14 @@ div.services {
     margin-top: 20px;
   }
 }
+
+/* PORTFOLIO */
+section.portfolio {
+  text-align: center;
+  padding: 120px 0;
+  background: $color-bg;
+
+  h3.services-title {
+    margin-top: 20px;
+  }
+}
