--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,6 @@ footer p {
 }
 
 footer ul {
-  margin-left: 130px;
   display: inline-block;
   list-style: none;
 }
@@ -192,6 +191,16 @@ footer ul li i.fab {
   border-radius: 50%;
   text-align: center;
   margin-right: 15px;
+}
+
+/* MEDIA QUERY */
+@media (max-width: 767px) {
+  footer {
+    text-align: center;
+  }
+  footer ul {
+    margin-top: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
