--- a/sass/style.scss
+++ b/sass/style.scss
@@ -174,7 +174,6 @@ footer {
   }
 
   ul {
-    margin-left: 130px;
     display: inline-block;
     list-style: none;
     li {
@@ -194,6 +193,18 @@ footer {
         text-align: center;
         margin-right: 15px;
       }
+    }
+  }
+}
+
+/* MEDIA QUERY */
+
+@media (max-width: 767px) {
+  footer {
+    text-align: center;
+
+    ul {
+      margin-top: 30px;
     }
   }
 }
